syntax = "proto3";

package messari.erc20.v1;

message ERC20Tokens {
  repeated ERC20Token items = 1;
}

message ERC20Token {
  string address = 1;
  string name = 2;
  string symbol = 3;
  uint64 decimals = 4;
}

message Transfers {
  repeated Transfer transfers = 1;
}

message Transfer {
  string from = 1;
  string to = 2;
  uint64 token_id = 3;
  string trx_hash = 4;
  uint64 ordinal = 5;
}

message TokenBalance {
  string token_address = 1;
  string balance = 2; // BigInt, in token's native amount
}

message Account {
  string address = 1;
  repeated TokenBalance balances = 2;
}
