syntax = "proto3";

package messari.erc20_market_cap.v1;

message ERC20MarketCap {
  string price = 1;
  string total_supply = 2;
  string market_cap = 3;
  string token_address = 4;
}

message ERC20MarketCaps {
  repeated ERC20MarketCap items = 1;
}